[package]
name = "ob-poc"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# All deprecated binaries removed - agentic CRUD examples are the master

# All deprecated examples removed - only working examples remain

[dependencies]
# Workspace crates
dsl-core.workspace = true
ob-poc-compiler = { path = "crates/ob-poc-compiler" }
inspector-projection = { path = "crates/inspector-projection" }
ob-agentic = { path = "crates/ob-agentic", features = ["gateway"] }
ob-semantic-matcher = { path = "crates/ob-semantic-matcher" }
ob-templates = { path = "crates/ob-templates" }
ob-workflow = { path = "crates/ob-workflow", features = ["database"] }
entity-gateway = { path = "crates/entity-gateway", optional = true }
ob-poc-types = { path = "crates/ob-poc-types" }
ob-poc-diagnostics = { path = "crates/ob-poc-diagnostics" }
ob-poc-boundary = { path = "crates/ob-poc-boundary" }
ob-poc-control-plane = { path = "crates/ob-poc-control-plane" }
# bpmn-controller: pool lifecycle (K8s Deployment + HPA) and instance
# kick-off via direct writes to bpmn-lite's Postgres schema.
# Reached from loader.* and bpmn-controller.* DSL verbs via Pattern B ops.
bpmn-controller = { path = "crates/bpmn-controller" }
# Phase 1 capability crates (see docs/todo/capability-crate-restructure-v1.md).
# Empty skeletons populated by Phases 2–5.
ob-poc-sage = { path = "crates/ob-poc-sage" }           # Sage intent understanding (Phase 2 dest)
ob-poc-journey = { path = "crates/ob-poc-journey" }     # Pack-guided workflows (Phase 3 dest)
# T11.1b (2026-07-12): ob-poc-agent now hosts the relocated production
# sage/journey/research/semtaxonomy_v2 engines (agent-tier extraction,
# EOP-PLAN-CONTROLPLANE-002). ob-poc depends on it so the ~9 call sites
# (agent/orchestrator.rs, api/agent_state.rs) that dispatch into these
# engines keep resolving; ob-poc-agent has no reverse dep on ob-poc
# (checked — no cycle).
ob-poc-agent = { path = "crates/ob-poc-agent" }
# ob-poc-domain split v1 (docs/todo/ob-poc-domain-split-v1.md) — 9
# per-business-capability crates carved out of ob-poc-domain. The
# original ob-poc-domain crate was deleted in Slice D (2026-05-14).
ob-poc-bods = { path = "crates/ob-poc-bods" }
ob-poc-deal = { path = "crates/ob-poc-deal" }
ob-poc-semtaxonomy = { path = "crates/ob-poc-semtaxonomy" }
ob-poc-ontology = { path = "crates/ob-poc-ontology" }
ob-poc-entity-linking = { path = "crates/ob-poc-entity-linking" }
ob-poc-trading-profile = { path = "crates/ob-poc-trading-profile" }
ob-poc-derived-attributes = { path = "crates/ob-poc-derived-attributes" }
ob-poc-taxonomy = { path = "crates/ob-poc-taxonomy" }
ob-poc-authoring = { path = "crates/ob-poc-authoring" } # Editor toolkit (Phase 5 dest)
ob-poc-macros = { path = "crates/ob-poc-macros" }
sem_os_core.workspace = true
sem_os_types.workspace = true
sem_os_ontology.workspace = true
sem_os_policy.workspace = true
sem_os_client = { path = "crates/sem_os_client" }
sem_os_obpoc_adapter = { path = "crates/sem_os_obpoc_adapter" }
sem_os_postgres = { path = "crates/sem_os_postgres" }
dsl-runtime = { path = "crates/dsl-runtime" }
# KYC/UBO durable verb-stream stack (EOP-DD-KYCUBO-002) — stream-backed verb ops live in domain_ops
ob-poc-kyc-substrate = { path = "crates/ob-poc-kyc-substrate" }
ob-poc-kyc-store = { path = "crates/ob-poc-kyc-store" }
ob-poc-kyc-seam = { path = "crates/ob-poc-kyc-seam" }
# dsl-runtime-split v1 Phase 11 (2026-05-14): ob-poc reaches the
# analyser-tier directly through dsl_v2 re-exports + entity_kind callers
# in mcp/verb_search, sage/verb_resolve, service_resources/discovery.
dsl-analysis = { path = "crates/dsl-analysis" }

# Core libraries
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4", "v5", "v7", "serde"] }

rust_decimal = { version = "1.33", features = ["serde"] } # Re-enabled for entity models
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
url = "2.5"

# DSL parsing and processing
nom = "7.1"

# Database integration (optional for Phase 1)
# sqlx held at 0.8.x: the sqlx 0.9 Encode blanket-impl change breaks pgvector's
# &Vector binding (see commit 8ba6bba8). Lift when sqlx 0.9 compatibility is
# confirmed — check pgvector and ob-semantic-matcher's bind sites first.
sqlx = { version = ">=0.8.6, <0.9", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "bigdecimal", "rust_decimal"], optional = true }
bigdecimal = { version = "0.4", features = ["serde"], optional = true }
pgvector = { version = "0.4", features = ["sqlx"], optional = true }

# gRPC client for EntityGateway + BPMN-Lite
tonic = "0.12"
prost = "0.13"



# Async runtime and utilities
tokio = { version = "1", features = ["full"] }

# HTTP client for external integrations
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# REST API framework (optional for server)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"], optional = true }

# Testing utilities (used in lib code for generation tests)
tempfile = "3.0"

regex = "1.12.2"
rand = "0.8"

# Fuzzy matching for smart suggestions (Jaro-Winkler, Levenshtein, etc.)
strsim = "0.11"

# Template rendering for research macros
handlebars = "6.0"

# JSON Schema validation for research macro output validation
jsonschema = { version = "0.29", default-features = false, features = ["resolve-file"] }

# For attribute API endpoints
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
# Phase F.1 (2026-04-22): BLAKE3 used for outbox idempotency-key hashing
# in the bpmn_lite_ops refactor. Already a transitive dep via
# ob-poc-types; direct listing here keeps the usage site explicit.
blake3 = "1"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"], optional = true }
colored = { version = "2.1", optional = true }
atty = { version = "0.2", optional = true }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
dotenvy = "0.15"
rustyline = { version = "12.0", optional = true }

# Event infrastructure (lock-free channels)
crossbeam-channel = "0.5"

# Serialization/Deserialization
# serde is already included above
bincode = "1.3"

# Unicode normalization for entity matching
unicode-normalization = "0.1"

# Small vector optimization for bounded collections
smallvec = { version = "1.11", features = ["serde"] }

# WebAssembly support (if needed for client-side)
# wasm-bindgen = "0.2"

# For graph visualization (Phase 3)
# petgraph = "0.6"

# Testing
[dev-dependencies]
# test-support: exposes ob-poc-control-plane::envelope::test_support::seal
# (+ every gate module's tests_support fixture constructors) for T4.2's
# envelope-persistence tests, which need a real sealed ExecutionEnvelope.
# Off in a plain `cargo build`; only unified in during `cargo test`.
ob-poc-control-plane = { path = "crates/ob-poc-control-plane", features = ["test-support"] }
# bpmn-lite was extracted to github.com/adamtc007/bpmn-lite. Workspace
# deps below resolve from the git tag; ~/.cargo/config.toml [patch]
# redirects to the local ~/dev/bpmn-lite/ checkout during development.
bpmn-lite-engine.workspace = true
bpmn-lite-store.workspace = true
bpmn-lite-server.workspace = true
ffi-catalogue.workspace = true
dmn-lite-bridge.workspace = true
bpmn-lite-ffi-http.workspace = true
bpmn-lite-ffi-grpc.workspace = true
sem_os_core.workspace = true
sem_os_ontology.workspace = true
sem_os_policy.workspace = true
tokio-stream = "0.1"
proptest = "1.4"
toml = "0.8"

[build-dependencies]
tonic-build = "0.12"

# Build compute-heavy crates in release mode even during debug builds
# This dramatically speeds up Candle embeddings (from 20+ min to ~10s)
[profile.dev]
debug = 1
incremental = false

[profile.test]
debug = 1
incremental = false

[profile.dev.package.candle-core]
opt-level = 3

[profile.dev.package.candle-nn]
opt-level = 3

[profile.dev.package.candle-transformers]
opt-level = 3

[profile.dev.package.half]
opt-level = 3

[profile.dev.package.gemm]
opt-level = 3

[profile.dev.package.gemm-common]
opt-level = 3

[profile.dev.package.gemm-f16]
opt-level = 3

[profile.dev.package.gemm-f32]
opt-level = 3

[profile.dev.package.gemm-f64]
opt-level = 3

[profile.dev.package.gemm-c32]
opt-level = 3

[profile.dev.package.gemm-c64]
opt-level = 3

[profile.dev.package.tokenizers]
opt-level = 3

[profile.dev.package.hf-hub]
opt-level = 3

# Also optimize the semantic matcher crate itself
[profile.dev.package.ob-semantic-matcher]
opt-level = 3

# Binary configuration
[[bin]]
name = "dsl_cli"
path = "src/bin/dsl_cli.rs"
required-features = ["cli"]

[[bin]]
name = "dsl_mcp"
path = "src/bin/dsl_mcp.rs"
required-features = ["mcp"]

# Phase 2.4 (2026-05-13): `ob_poc_acp` binary relocated to the new
# `ob-poc-agent` crate as `bin/sage-acp`. Build the relocated binary
# with `cargo build -p ob-poc-agent --bin sage-acp`.

# Slice 4.1 (2026-04-22): `dsl_api` binary retired per user decision Q2(a).
# `ob-poc-web` is now the sole authoritative HTTP server for all production
# traffic. `Dockerfile.api` was deleted alongside this binary — downstream
# deployments should build `ob-poc-web` instead.

[[bin]]
name = "batch_test_harness"
path = "src/bin/batch_test_harness.rs"
required-features = ["database", "cli"]

[[bin]]
name = "sem_os_footprint_audit"
path = "src/bin/sem_os_footprint_audit.rs"

[[bin]]
name = "verb_to_dsl"
path = "src/bin/verb_to_dsl.rs"

# Features for conditional compilation
[features]
default = ["server"]  # Enable for sqlx prepare; use --no-default-features to disable

database = ["dep:sqlx", "dep:bigdecimal", "dep:entity-gateway", "dep:pgvector", "ob-poc-diagnostics/database", "ob-poc-boundary/database", "ob-poc-sage/database", "ob-poc-agent/database", "ob-poc-authoring/database", "ob-poc-bods/database", "ob-poc-semtaxonomy/database", "ob-poc-entity-linking/database", "ob-poc-trading-profile/database", "ob-poc-derived-attributes/database", "ob-poc-taxonomy/database"]  # Only enable database functionality when needed
server = ["database", "mcp", "dep:axum", "dep:tower", "dep:tower-http"]  # REST API server with intent pipeline
cli = ["dep:clap", "dep:colored", "dep:atty", "dep:rustyline"]  # CLI tool for DSL testing
mcp = ["database"]  # MCP/intent pipeline for semantic verb search
# Slice 4.2 (2026-04-22): `vnext-repl` feature removed. REPL V2 is always enabled.
# The feature existed as an alias for `database` during the V1→V2 migration and
# was deprecated on 2026-03-22; no remaining cfg-gate depended on it post-cleanup.
# Slice 4.1-d (2026-04-22): `runbook-gate-vnext` feature removed. After dsl_api
# retirement there was one consumer (ob-poc-web) and one code path (the always-on
# gated dispatch); the feature was absorbed into default. All #[cfg(feature =
# "runbook-gate-vnext")] attribute sites in agent_service.rs were stripped —
# the code compiles unconditionally.
write-set-contract = []  # Enables contract-driven write_set derivation from verb YAML metadata (INV-8)



# Optional: Workspace configuration if you have multiple crates
# [workspace]
# members = [
#     "proto", # Assuming your proto files are in a 'proto' directory
# ]

[workspace]
members = [
    ".",
    "crates/ob-poc-compiler",
    "crates/ob-agentic",
    "crates/ob-templates",
    "crates/ob-workflow",
    "crates/dsl-lsp",

    "crates/ob-poc-web",
    "crates/ob-poc-types",
    "crates/ob-poc-diagnostics",
    "crates/ob-poc-boundary",
    "crates/ob-poc-control-plane",
    "crates/ob-poc-sage",
    "crates/ob-poc-journey",
    # ob-poc-domain split v1 — 9 per-business-capability crates carved out of
    # the original ob-poc-domain crate (which was deleted 2026-05-14).
    "crates/ob-poc-bods",
    "crates/ob-poc-deal",
    "crates/ob-poc-semtaxonomy",
    "crates/ob-poc-ontology",
    "crates/ob-poc-entity-linking",
    "crates/ob-poc-trading-profile",
    "crates/ob-poc-derived-attributes",
    "crates/ob-poc-taxonomy",
    "crates/ob-poc-authoring",
    # KYC/UBO W1 substrate — EOP-DD-KYCUBO-001 (in-memory slice; no DB dep)
    "crates/ob-poc-kyc-substrate",
    # KYC/UBO durable store (membrane) — EOP-DD-KYCUBO-002 (the only sqlx crate in the stack)
    "crates/ob-poc-kyc-store",
    # KYC/UBO runtime<->store seam — EOP-DD-KYCUBO-002 §4 (the only KYC crate touching dsl-runtime)
    "crates/ob-poc-kyc-seam",
    "crates/ob-poc-agent",
    "crates/entity-gateway",
    "crates/ob-semantic-matcher",

    "crates/ob-poc-macros",

    "xtask", "crates/playbook-core",
    "crates/inspector-projection",

    # Build-time tool: emits the v0.6 §7 catalogue manifest for federated DSL peers.
    "crates/ob-poc-manifest-export",
    # Receiver-side bus handler — bridges ob-poc verb dispatch to dsl-bus-server.
    "crates/ob-poc-bus-handler",

    # sem_os_policy extracted to github.com/adamtc007/sem-os v0.1.1
    "crates/sem_os_postgres",
    "crates/sem_os_server",
    "crates/sem_os_client",
    "crates/sem_os_obpoc_adapter",
    "crates/sem_os_harness",
    "crates/sem_os_mcp",

    # BPMN controller — pool lifecycle + instance kick-off (L1+)
    "crates/bpmn-controller",

    # Three-plane refactor — dsl-runtime (Phase 1 onwards)
    "crates/dsl-runtime",

    # dsl-runtime split v1 (docs/todo/dsl-runtime-split-v1.md) — analyser plane
    "crates/dsl-analysis",

    # Unified DSL v0.1 — Tranche 2: atom model and parser foundation
    "crates/dsl-atoms",
    "crates/dsl-diagnostics",
    "crates/dsl-parser",
    "crates/dsl-ast",
    # Unified DSL v0.1 — Tranche 3–5 placeholders
    "crates/dsl-resolution",
    "crates/dsl-lowering",
    "crates/dsl-semos-frontend",
    "crates/dsl-bpmn-frontend",

    # Unified DSL v0.1 — Tranche 6: journey-persisted runtime + test harness
    "crates/bpmn-runtime",
    "crates/bpmn-test-harness",

    # Unified DSL v0.2 — Tranche 1: Sage pack matcher
    "crates/dsl-sage",

    # Unified DSL v0.2 — Tranche 5: Camunda 8 migration tool
    "crates/dsl-migrate",
    # Unified DSL v0.2 — Tranche 5b: round-trip verifier for dsl-migrate output
    "crates/dsl-migrate-verify",

    # Unified DSL v0.2 — Tranche 6: SVG diagram renderer
    "crates/dsl-render",

]

[workspace.dependencies]
# Library repos extracted to GitHub — local [patch] in rust/.cargo/config.toml
# overrides these with ~/dev/ paths during development.
dsl_types    = { git = "https://github.com/adamtc007/dsl",    tag = "v0.1.5" }
dsl-core     = { git = "https://github.com/adamtc007/dsl",    tag = "v0.1.5" }
sem_os_types    = { git = "https://github.com/adamtc007/dsl",    tag = "v0.1.5" }
sem_os_core     = { git = "https://github.com/adamtc007/dsl",    tag = "v0.1.5" }
sem_os_ontology = { git = "https://github.com/adamtc007/dsl",    tag = "v0.1.5" }
sem_os_policy   = { git = "https://github.com/adamtc007/dsl",    tag = "v0.1.5" }

# bpmn-lite published as github.com/adamtc007/bpmn-lite v0.2.0 (T1 + T2:
# dsl-manifest, dsl-bus-*, dmn-lite-server, bpmn-lite plan-walker bus
# integration). Local-dev [patch] in ~/.cargo/config.toml redirects to
# ~/dev/bpmn-lite/ for cross-repo editing.
bpmn-lite-engine   = { git = "https://github.com/adamtc007/bpmn-lite", tag = "v0.2.0" }
bpmn-lite-store    = { git = "https://github.com/adamtc007/bpmn-lite", tag = "v0.2.0" }
bpmn-lite-server   = { git = "https://github.com/adamtc007/bpmn-lite", tag = "v0.2.0" }
bpmn-lite-ffi-http = { git = "https://github.com/adamtc007/bpmn-lite", tag = "v0.2.0" }
bpmn-lite-ffi-grpc = { git = "https://github.com/adamtc007/bpmn-lite", tag = "v0.2.0" }
ffi-catalogue      = { git = "https://github.com/adamtc007/bpmn-lite", tag = "v0.2.0" }
dmn-lite-bridge    = { git = "https://github.com/adamtc007/bpmn-lite", tag = "v0.2.0" }
dsl-bus-client     = { git = "https://github.com/adamtc007/bpmn-lite", tag = "v0.2.0" }
dsl-bus-server     = { git = "https://github.com/adamtc007/bpmn-lite", tag = "v0.2.0" }
dsl-bus-storage    = { git = "https://github.com/adamtc007/bpmn-lite", tag = "v0.2.0" }
dsl-bus-protocol   = { git = "https://github.com/adamtc007/bpmn-lite", tag = "v0.2.0" }
dsl-manifest       = { git = "https://github.com/adamtc007/bpmn-lite", tag = "v0.2.0" }

[lints.rust]
dead_code = "deny"
unreachable_pub = "deny"
