[package]
name = "bpmn-lite-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Static analysis for compiled bpmn-lite programs — constant-condition branches, unwritten-flag conditions, FFI coverage"

[dependencies]
bpmn-lite-types = { path = "../bpmn-lite-types" }
serde = { workspace = true }

[lints]
workspace = true
