[package]
name = "bpmn-lite-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
database = ["postgres"]
postgres = ["dep:sqlx", "dep:chrono"]

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
petgraph = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
quick-xml = "0.36"
serde_yaml = "0.9"
sqlx = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
ob-poc-types = { path = "../../rust/crates/ob-poc-types" }
bpmn-lite-types = { path = "../bpmn-lite-types" }
bpmn-lite-compiler = { path = "../bpmn-lite-compiler" }
bpmn-lite-store = { path = "../bpmn-lite-store" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
