[package]
name = "bpmn-lite-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
database = ["postgres"]
postgres = ["dep:bpmn-lite-store-postgres", "dep:sqlx"]

[dependencies]
bpmn-lite-types = { path = "../bpmn-lite-types" }
bpmn-lite-engine = { path = "../bpmn-lite-engine" }
bpmn-lite-store = { path = "../bpmn-lite-store" }
bpmn-lite-store-postgres = { path = "../bpmn-lite-store-postgres", optional = true }
bpmn-lite-vm = { path = "../bpmn-lite-vm" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tokio-stream = "0.1"
sqlx = { workspace = true, optional = true }
hex = "0.4"
ob-poc-types = { path = "../../rust/crates/ob-poc-types" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
