[package]
name = "bpmn-lite-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
database = ["postgres"]
postgres = ["dep:bpmn-lite-store-postgres", "dep:sqlx"]

[dependencies]
bpmn-lite-types = { path = "../bpmn-lite-types" }
bpmn-lite-engine = { path = "../bpmn-lite-engine" }
bpmn-lite-compiler = { path = "../bpmn-lite-compiler" }
bpmn-lite-store = { path = "../bpmn-lite-store" }
bpmn-lite-store-postgres = { path = "../bpmn-lite-store-postgres", optional = true }
bpmn-lite-vm = { path = "../bpmn-lite-vm" }
# FFI catalogue + dispatcher
ffi-types = { path = "../ffi-types" }
ffi-catalogue = { path = "../ffi-catalogue" }
ffi-dispatcher = { path = "../ffi-dispatcher" }
# dmn-lite vocabulary (in-process FFI owner)
dmn-lite-types = { path = "../dmn-lite-types" }
dmn-lite-parser = { path = "../dmn-lite-parser" }
dmn-lite-compiler = { path = "../dmn-lite-compiler" }
dmn-lite-bridge = { path = "../dmn-lite-bridge" }
bpmn-lite-ffi-http = { path = "../bpmn-lite-ffi-http" }
bpmn-lite-ffi-grpc = { path = "../bpmn-lite-ffi-grpc" }
bpmn-lite-analysis = { path = "../bpmn-lite-analysis" }
# Federated DSL bus (v0.6 §T2B.9). Wired alongside the existing 50051
# gRPC service so a single process hosts both the BPMN service and the
# bus result-receiver. Splitting into a separate bin is tech debt logged
# for after T3 (the executor RIP-AND-REPLACE).
dsl-bus-client = { path = "../dsl-bus-client" }
dsl-bus-server = { path = "../dsl-bus-server" }
dsl-bus-storage = { path = "../dsl-bus-storage" }
dsl-bus-protocol = { path = "../dsl-bus-protocol" }
bpmn-lite-bus-handler = { path = "../bpmn-lite-bus-handler" }
async-trait = { workspace = true }
chrono = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tokio-stream = "0.1"
sqlx = { workspace = true, optional = true }
hex = "0.4"
blake3 = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
ob-poc-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
