[package]
name = "bpmn-lite-vm"
version = "0.1.0"
edition = "2021"
description = "BPMN-Lite bytecode interpreter — fiber dispatch, instruction execution, wait/race/loop primitives. Stable single-concern crate the engine orchestrates over."

# Capability discipline (Sage ACP / bpmn-lite restructure Phase 1):
#   IN-SCOPE  : the bytecode interpreter — `tick_fiber_inner`,
#               instruction dispatch, stack ops, wait/race/loop
#               semantics. Reads bytecode produced by
#               bpmn-lite-compiler, mutates state through the
#               ProcessStore trait, emits RuntimeEvents from
#               bpmn-lite-types.
#   OUT-OF-SCOPE: orchestration around the interpreter (start /
#                 signal / cancel / inspect / scheduler — those
#                 are in bpmn-lite-engine), persistence backends
#                 (bpmn-lite-store-*), authoring (bpmn-lite-authoring).

[dependencies]
bpmn-lite-types = { path = "../bpmn-lite-types" }
bpmn-lite-store = { path = "../bpmn-lite-store" }
async-trait = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
